Second draft of research proposal

--- a/research_proposal.tex
+++ b/research_proposal.tex
@@ -9,11 +9,19 @@
 \begin{document}
 \maketitle
 
-My senior thesis will review abstract interpretation as it is applied to programs that use faceted execution. Faceted execution is a programming-language mechanism that encloses sensitive data in facets, which consist of a policy, a real value, and a default value. To access the value of a facet, the observer must be checked against the facet's policy. If they do not satisfy the policy, they can access only the default value of the facet, leaving the real value secure against unintended observers. Faceted execution is designed to facilitate the enforcement of privacy policies so that they can be expressed separately from the implementation of the program, meaning that changes to the privacy policy can be made reliably with minimal modification of the application logic.
+My senior thesis will review abstract interpretation as a technique for analyzing programs that use faceted execution. Faceted execution is a programming-language mechanism that allows sensitive data to be enclosed in special data structures called facets, which consist of a policy, a real value, and a default value. To access the value of a facet, the observer must be checked against the facet's policy. If they do not satisfy the policy, they can access only the default value of the facet, leaving the real value secure against unauthorized observers.
 
-Abstract interpretation is a technique used to statically analyze programs. In the case of faceted execution, it is used to optimize the use of faceted values, which may carry substantial runtime overhead. For instance, to prevent information leakage a function applied to a faceted value must be executed twice, once for the real value of the facet and another time for the default value, so that the return value of the function is also a facet. If the static analyzer can prove that a facet passed to a function is only ever evaluated to its real value, then the function need only be evaluated with the real value of the facet, and significant performance gains could be realized.
+Faceted execution allows privacy policies to be expressed separately from the implementation of the program, meaning that changes to the privacy policy can be made reliably with minimal modification of the application logic. Faceted execution is thus an implementation of policy-agnostic programming.
 
-Faceted execution has been implemented in a variant of Racket called \textsc{Racets} \cite{racets}. An abstract interpretation of a closely related language with faceted execution is also available \cite{abstract-inter}. My research will involve writing several substantial example programs that use faceted execution. Once I have written these programs in \textsc{Racets}, I will translate them into the language of the abstract interpreter, and assess what conclusions it is able to draw about them, and to what level of precision.
+The \textsc{Racets} programming language is an extension of Racket that incorporates faceted execution \cite{racets}. \textsc{Racets} uses the Racket macro system to facilitate the integration of facets into regular Racket code. An advantage of this approach is that functions can be written to operate on facets without any facet-specific logic: the \textsc{Racets} macros re-write function applications to ensure that the return value of a function applied to facets is itself a facet. For example, if the function \texttt{square-root} were to be applied to the facet \texttt{(facet l 42 0)} (where \texttt{l} is the label identifying the facet's privacy policy, \texttt{42} is the real value of the facet and \texttt{0} is the default value), it would return the facet \texttt{(facet l (square-root 42) (square-root 0))}, ensuring that the faceted value remains protected by the privacy policy. At some later point, the \texttt{obs} function could be called with a label to access the facet's value.
+
+An implication of this rewriting procedure is that functions applied to faceted values have to be evaluated twice, once for the real value and once for the default value. The double evaluation imposes a significant runtime cost on faceted execution.
+
+This cost can be mitigated to some extent by static analysis by an abstract interpreter. If the static analyzer can prove that a facet passed to a function is only ever evaluated to its real value, then the function need only be evaluated with the real value of the facet, and significant performance gains could be realized.
+
+An abstract interpreter of a language that is closely related to \textsc{Racets} is under development \cite{abstract-inter}. My research will involve writing several substantial example programs that use faceted execution, for example a grade server in which professors, teacher's assistants, and students all have different access to the grade data guaranteed by the use of facets. Once I have written these programs in \textsc{Racets}, I will translate them into the language of the abstract interpreter, and assess what conclusions it is able to draw about them, and to what level of precision.
+
+In this way, I will be better able to understand a number of important topics in computer science: the programmatic enforcement of privacy policies, faceted execution, and static analysis.
 
 \bibliography{thesis}
 
