Third draft of research proposal

--- a/research_proposal.tex
+++ b/research_proposal.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 
+\usepackage{amsmath}
+
 \bibliographystyle{acm}
 
 \title{CS399 Research Proposal}
@@ -9,19 +11,15 @@
 \begin{document}
 \maketitle
 
-My senior thesis will review abstract interpretation as a technique for analyzing programs that use faceted execution. Faceted execution is a programming-language mechanism that allows sensitive data to be enclosed in special data structures called facets, which consist of a policy, a real value, and a default value. To access the value of a facet, the observer must be checked against the facet's policy. If they do not satisfy the policy, they can access only the default value of the facet, leaving the real value secure against unauthorized observers.
+My senior thesis will review abstract interpretation as a technique for analyzing programs that use faceted execution. Faceted execution is a programming-language mechanism that allows sensitive data to be enclosed in special data structures called facets, which are tuples of the form $\langle l\ ?\ v_H : v_L \rangle$ where $l$ is a label, $v_H$ is the high-confidentiality value, and $v_L$ is the low-confidentiality value. $v_H$ can only be accessed by observers that match the facet's label.
 
-Faceted execution allows privacy policies to be expressed separately from the implementation of the program, meaning that changes to the privacy policy can be made reliably with minimal modification of the application logic. Faceted execution is thus an implementation of policy-agnostic programming.
+Faceted execution allows privacy policies to be expressed separately from the implementation of the program, meaning that changes to the privacy policy can be made reliably with minimal modification of the application logic. Faceted execution is thus an implementation of policy-agnostic programming \cite{faceted}.
 
-The \textsc{Racets} programming language is an extension of Racket that incorporates faceted execution \cite{racets}. \textsc{Racets} uses the Racket macro system to facilitate the integration of facets into regular Racket code. An advantage of this approach is that functions can be written to operate on facets without any facet-specific logic: the \textsc{Racets} macros re-write function applications to ensure that the return value of a function applied to facets is itself a facet. For example, if the function \texttt{square-root} were to be applied to the facet \texttt{(facet l 42 0)} (where \texttt{l} is the label identifying the facet's privacy policy, \texttt{42} is the real value of the facet and \texttt{0} is the default value), it would return the facet \texttt{(facet l (square-root 42) (square-root 0))}, ensuring that the faceted value remains protected by the privacy policy. At some later point, the \texttt{obs} function could be called with a label to access the facet's value.
+The \textsc{Racets} programming language is an extension of Racket that incorporates faceted execution \cite{racets}. \textsc{Racets} uses the Racket macro system to facilitate the integration of facets into regular Racket code. An advantage of this approach is that functions can be written to operate on facets without any facet-specific logic: the \textsc{Racets} macros re-write function applications to ensure that the return value of a function applied to facets is itself a facet. For example, if the function \textit{square-root} were to be applied to the facet $\langle l \ ?\ 42 : 0 \rangle$, it would return the facet $\langle l \ ?\ \textit{square-root}(42) : \textit{square-root}(0) \rangle$, ensuring that the faceted value remains protected by the privacy policy without any special handling in \textit{square-root} itself. The \textit{obs} function in \textsc{Racets} is used when the value of a facet needs to be accessed directly, e.g. for output to the user's screen.
 
-An implication of this rewriting procedure is that functions applied to faceted values have to be evaluated twice, once for the real value and once for the default value. The double evaluation imposes a significant runtime cost on faceted execution.
+Functions applied to facets must be evaluated twice, once for the high-confidentiality value and once for the low-confidentiality value. The double evaluation imposes a significant runtime cost on faceted execution. This cost can be mitigated to some extent by static analysis by an abstract interpreter (as well as complicating the use of functions with side-effects). If the static analyzer can prove that a facet passed to a function is only ever evaluated to its real value, then the function need only be evaluated with the real value of the facet, and significant performance gains could be realized.
 
-This cost can be mitigated to some extent by static analysis by an abstract interpreter. If the static analyzer can prove that a facet passed to a function is only ever evaluated to its real value, then the function need only be evaluated with the real value of the facet, and significant performance gains could be realized.
-
-An abstract interpreter of a language that is closely related to \textsc{Racets} is under development \cite{abstract-inter}. My research will involve writing several substantial example programs that use faceted execution, for example a grade server in which professors, teacher's assistants, and students all have different access to the grade data guaranteed by the use of facets. Once I have written these programs in \textsc{Racets}, I will translate them into the language of the abstract interpreter, and assess what conclusions it is able to draw about them, and to what level of precision.
-
-In this way, I will be better able to understand a number of important topics in computer science: the programmatic enforcement of privacy policies, faceted execution, and static analysis.
+An abstract interpreter of a \textsc{Racets}-like language is under development \cite{abstract-inter}. My research will draw upon both the \textsc{Racets} language and the related abstract interpreter. It will involve writing several substantial example programs that use faceted execution, for example a grade server in which professors, teacher's assistants, and students all have different access to the grade data, protected by facets. Once I have written these programs in \textsc{Racets}, I will translate them into the language of the abstract interpreter, and assess what conclusions it is able to draw about them, and to what level of precision. For example, if a certain function is sometimes applied to faceted values and sometimes applied to regular values, the abstract interpreter may or may not be able to identify the call sites that require special handling of the faceted execution, and those that can be run normally. In general, the more fine-grained the conclusions the abstract interpreter can draw, the greater the improvement of performance time.
 
 \bibliography{thesis}
 
