--- a/thesis.bib
+++ b/thesis.bib
@@ -9,6 +9,14 @@
 @Unpublished{abstract-inter,
   author = {Micinski, Kristopher and Daris, David and Gilray, Thomas},
   title  = {Abstracting faceted execution: {S}tatic analysis of dynamic information-flow control for higher-order languages},
+  year   = {2019},
+}
+
+@Article{faceted,
+  author  = {Austin, Thomas H. and Yang, Jean and Flanagan, Cormac},
+  title   = {Faceted execution of policy-agnostic programs},
+  journal = {PLAS '13},
+  year    = {2013},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
