Start work on rough draft of thesis

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -19,4 +19,22 @@
   year    = {2013},
 }
 
+@InProceedings{ai-original,
+  author    = {Cousot, Patrick and Cousot, Radhia},
+  title     = {Abstract interpretation: {A} unified lattice model for static analysis of programs by construction or approximation of functions},
+  booktitle = {Conference Record of the Fourth ACM Symposium on the Principles of Programming Languages},
+  year      = {1979},
+  pages     = {238--252},
+}
+
+@InProceedings{aam,
+  author    = {Van Horn, David and Might, Matthew},
+  title     = {Abstracting abstract machines},
+  booktitle = {Proceeding of the 15th ACM SIGPLAN International Conference on Functional Programming},
+  year      = {2010},
+  pages     = {51--62},
+  address   = {New York, NY},
+  publisher = {ACM},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
