Expand introduction to thesis

--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -12,7 +12,7 @@
 \maketitle
 
 \section{Introduction}
-This thesis reviews abstract interpretation as a technique for analyzing programs that use faceted execution, a programming language mechanism for enforcing privacy policies.
+This thesis reviews abstract interpretation as a technique for analyzing programs that use faceted execution, a programming language mechanism for enforcing privacy policies. It presents an overview of faceted execution and abstract interpretation, and analyzes in-depth a sample program that uses faceted execution.
 
 \section{Background}
 \subsection{Faceted execution}
