Expand exposition of faceted execution in thesis

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -37,4 +37,11 @@
   publisher = {ACM},
 }
 
+@Article{jeeves,
+  author  = {Yang, Jean and Yessenov, Kuat and Solar-Lezama, Armando},
+  title   = {A language for automatically enforcing privacy policies},
+  journal = {POPL '12},
+  year    = {2012},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
