--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -20,16 +20,18 @@ Faceted execution is a programming-language mechanism that allows sensitive data
 
 Faceted execution allows privacy policies to be expressed separately from the implementation of the program, meaning that changes to the privacy policy can be made reliably with minimal modification of the application logic. Faceted execution is thus an implementation of policy-agnostic programming \cite{faceted}.
 
-The \textsc{Racets} programming language is an extension of Racket that incorporates faceted execution \cite{racets}. \textsc{Racets} uses the Racket macro system to facilitate the use of facets with Racket code written without special consideration for faceted values. An advantage of this approach is that functions can be written to operate on facets without any logic specific to faceted execution: the \textsc{Racets} macros re-write function applications to ensure that the return value of a function applied to facets is itself a facet. For example, if the function \textit{square-root} were applied to the facet $\langle l \ ?\ 42 : 0 \rangle$, it would return the facet $\langle l \ ?\ \textit{square-root}(42) : \textit{square-root}(0) \rangle$, ensuring that the faceted value remains protected by the privacy policy, even if \textit{square-root} is totally oblivious to the policy.
+Full support of faceted execution requires changes to core language mechanisms like function application. Concretely, if the function \textit{square-root} were applied to the facet $\langle l \ ?\ 42 : 0 \rangle$, it would return the facet $\langle l \ ?\ \textit{square-root}(42) : \textit{square-root}(0) \rangle$, ensuring that the faceted value remains protected by the privacy policy, even if \textit{square-root} is totally oblivious to the policy.
 
-As the example with \textit{square-root} indicates, functions applied to facets must be evaluated twice, once with the high-confidentiality value and once with the low-confidentiality value. The double evaluation imposes a significant runtime cost on faceted execution (as well as complicating the use of functions with side-effects). This cost can be mitigated to some extent by static analysis with an abstract interpreter. If the static analyzer can prove that a facet passed to a function only ever evaluates to its high-confidentiality value, then the evaluation of the function with the low-confidentiality value could be skipped, and significant performance gains could be realized.
+Researchers have adopted different strategies to implement faceted execution. One strategy is to design a new programming language with faceted-execution primitives built-in. This is the strategy adopted by the Jeeves programming language \cite{jeeves}. Another strategy is to use syntactic macros to graft faceted execution on to an existing language, provided that the language's macro system is rich enough to support it. The \textsc{Racets} programming language adopts the latter strategy, by augmenting the Racket language with syntactic macros \cite{racets}.
+
+A practical problem of implementing faceted execution is that it can have high runtime cost. As the example with \textit{square-root} above indicates, functions applied to facets must be evaluated twice, once with the high-confidentiality value and once with the low-confidentiality value. The double evaluation imposes a significant runtime cost on faceted execution (as well as complicating the use of functions with side-effects). This cost can be mitigated to some extent by static analysis with an abstract interpreter. If the static analyzer can prove that a facet passed to a function only ever evaluates to its high-confidentiality value, then the evaluation of the function with the low-confidentiality value could be skipped, and significant performance gains could be realized.
 
 \subsection{Abstract interpretation}
 One technique for static analysis is abstract interpretation, wherein the computation of a program is modelled with abstract objects (e.g., the abstract ``negative number'' instead of the concrete $-10$) so that real properties of the program can be reasoned about \cite{ai-original}. Abstract interpreters can be derived mechanically from abstract machines, provided that the formalism for the abstract machine is expressed in an amenable manner \cite{aam}.
 
-An abstract interpreter of a \textsc{Racets}-like language is under development for this purpose \cite{abstract-inter}. My research will draw upon both the \textsc{Racets} language and this related abstract interpreter. It will involve writing several substantial example programs that use faceted execution, for example a grade server in which professors, teacher's assistants, and students all have different levels of access to the grade data, protected by facets. Once I have written these programs in \textsc{Racets}, I will translate them into the language of the abstract interpreter, and assess what conclusions it is able to draw about them, and to what level of precision. For example, if a certain function is sometimes applied to faceted values and sometimes applied to regular values, the abstract interpreter may or may not be able to identify the call sites that require special handling of the faceted execution, and those that can be run normally. In general, the more fine-grained the conclusions the abstract interpreter can draw, the greater the improvement of performance time. My research will aid in understanding the efficacy of static analysis as applied to faceted execution, and thus contribute to improving the programming-language resources that software developers have available to correctly and reliably enforce privacy policies.
+An abstract interpreter of a \textsc{Racets}-like language is under development for this purpose \cite{abstract-inter}. My research will draw upon both the \textsc{Racets} language and this related abstract interpreter. It will involve writing several substantial example programs (one of which is presented in section \ref{sec:program}) that use faceted execution, for example a grade server in which professors, teacher's assistants, and students all have different levels of access to the grade data, protected by facets. Once I have written these programs in \textsc{Racets}, I will translate them into the language of the abstract interpreter, and assess what conclusions it is able to draw about them, and to what level of precision. For example, if a certain function is sometimes applied to faceted values and sometimes applied to regular values, the abstract interpreter may or may not be able to identify the call sites that require special handling of the faceted execution, and those that can be run normally. In general, the more fine-grained the conclusions the abstract interpreter can draw, the greater the improvement of performance time. My research will aid in understanding the efficacy of static analysis as applied to faceted execution, and thus contribute to improving the programming-language resources that software developers have available to correctly and reliably enforce privacy policies.
 
-\section{A sample faceted-execution program}
+\section{A sample faceted-execution program\label{sec:program}}
 
 \bibliography{thesis}
 
