--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -1,6 +1,12 @@
 \documentclass{article}
 
 \usepackage{amsmath}
+\usepackage{listings}
+
+\lstset{
+	language=Lisp,
+	numbers=left
+}
 
 \bibliographystyle{acm}
 
@@ -24,7 +30,54 @@ Full support of faceted execution requires changes to core language mechanisms l
 
 Researchers have adopted different strategies to implement faceted execution. One strategy is to design a new programming language with faceted-execution primitives built-in. This is the strategy adopted by the Jeeves programming language \cite{jeeves}. Another strategy is to use syntactic macros to graft faceted execution on to an existing language, provided that the language's macro system is rich enough to support it. The \textsc{Racets} programming language adopts the latter strategy, by augmenting the Racket language with syntactic macros \cite{racets}.
 
+The following subsections will present an overview of the specific mechanics of the \textsc{Racets} programming language, but the concepts are general enough to apply to other implementations of faceted execution.
+
+\subsubsection{A simple example of faceted execution}
+Policies governing access to data are declared with the \texttt{let-label} form in \textsc{Racets}:
+
+\begin{lstlisting}
+(define alice-policy
+    (let-label l (lambda (x) (equal? x "Alice")) l))
+
+(define bob-policy
+    (let-label l (lambda (x) (equal? x "Bob")) l))
+\end{lstlisting}
+
+The two declarations in the source code above create two policies and bind them to the names \texttt{alice-policy} and \texttt{bob-policy}. The policies enforce that only entities identifying themselves as ``Alice'' or ``Bob'', respectively, may view the high-confidentiality value of any facet under the policies.
+
+A faceted data value is created with the \texttt{fac} form:
+
+\begin{lstlisting}
+(define my-facet (fac alice-policy 42 0))
+\end{lstlisting}
+
+\texttt{my-facet} is defined with Alice's policy, the high-confidentiality value $42$, and the low-confidentiality value $0$.
+
+The \texttt{obs} form is used to view the value of a facet:
+
+\begin{lstlisting}
+(obs alice-policy "Alice" my-facet)
+\end{lstlisting}
+
+The expression above will evaluate to $42$, as the argument \texttt{"Alice"} satisfies the facet's policy. By contrast, the expression below will evaluate to $0$ since \texttt{"Bob"} does not satisfy the facet's policy.
+
+\begin{lstlisting}
+(obs alice-policy "Bob" my-facet)
+\end{lstlisting}
+
+The policy passed to a facet must match the policy that the facet was created with. In the case that the facets do not match, \texttt{obs} functions as a no-op (so that the semantics are sound). Each of the two calls to \texttt{obs} below, for instance, will simply return \texttt{my-facet} unchanged.
+
+\begin{lstlisting}
+(obs bob-policy "Alice" my-facet)
+(obs bob-policy "Bob" my-facet)
+\end{lstlisting}
+
+\subsubsection{An example of nested facets}
+TODO
+
+\subsubsection{Efficiency of faceted execution}
 A practical problem of implementing faceted execution is that it can have high runtime cost. As the example with \textit{square-root} above indicates, functions applied to facets must be evaluated twice, once with the high-confidentiality value and once with the low-confidentiality value. The double evaluation imposes a significant runtime cost on faceted execution (as well as complicating the use of functions with side-effects). This cost can be mitigated to some extent by static analysis with an abstract interpreter. If the static analyzer can prove that a facet passed to a function only ever evaluates to its high-confidentiality value, then the evaluation of the function with the low-confidentiality value could be skipped, and significant performance gains could be realized.
+
 
 \subsection{Abstract interpretation}
 One technique for static analysis is abstract interpretation, wherein the computation of a program is modelled with abstract objects (e.g., the abstract ``negative number'' instead of the concrete $-10$) so that real properties of the program can be reasoned about \cite{ai-original}. Abstract interpreters can be derived mechanically from abstract machines, provided that the formalism for the abstract machine is expressed in an amenable manner \cite{aam}.
