--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -78,8 +78,8 @@ The policy passed to a facet must match the policy that the facet was created wi
 Faceted values may be nested for more fine-grained control over the views of the data that are available. Alice may define a nested facet as follows:
 
 \begin{lstlisting}
-(define location-facet 
-  (fac alice-policy 
+(define location-facet
+  (fac alice-policy
     "370 Lancaster Ave, Haverford PA"
     (fac bob-policy
       "Haverford, PA"
@@ -103,7 +103,48 @@ Bob must make two calls to \texttt{obs} to fully resolve the facet's value:
 As before, Bob must ensure that the policy he passes to each \texttt{obs} call matches the policy of the facet. In this case, the outer facet uses Alice's policy and the inner facet uses Bob's policy, so the calls to \texttt{obs} must be organized likewise.
 
 \subsubsection{An example of faceted lists}
-TODO
+Using faceted values with data structures involves additional complications. Consider the following example:
+
+\begin{lstlisting}
+(define grades (list))
+(set! grades (cons (fac alice-policy 84 0) grades))
+\end{lstlisting}
+
+The programmer likely intended for \texttt{grades} to be of the form \texttt{(list (fac alice-policy 84 0))}, i.e. a regular list containing a single facet. However, the rules of faceted execution with regard to function application apply to \texttt{cons} just like any other function: functions applied to faceted values yield faceted return values. The real value of \texttt{grades} after the \texttt{set!} operation is
+
+\begin{lstlisting}
+(fac alice-policy (list 84) (list 0))
+\end{lstlisting}
+
+Imagine another grade was added to the list, like so:
+
+\begin{lstlisting}
+(set! grades (cons (fac bob-policy 73 0) grades))
+\end{lstlisting}
+
+Then the value of the list would be
+
+\begin{lstlisting}
+(fac bob-policy
+  (fac alice-policy (list 73 84) (list 73 0))
+  (fac alice-policy (list 0 84) (list 0 0)))
+\end{lstlisting}
+
+encompassing four different possibilities: satisfying both Alice and Bob's policies, satisfying one or the other, or satisfying neither.
+
+The following procedure observes the entire list of grades into a regular Racket list of integers:
+
+\begin{lstlisting}
+(define (reveal-grades-rec grade-list policy-list arg)
+  (if (empty? policy-list)
+      grade-list
+      (obs
+        (car policy-list)
+        arg
+        (reveal-grades-rec grade-list (cdr policy-list) arg))))])
+\end{lstlisting}
+
+It takes in a list of grades, a list of policies which should correspond index-by-index to the list of grades (remember that \texttt{obs} requires the policy to match the facet's policy), and an argument to pass to the policy predicates.
 
 \subsubsection{Efficiency of faceted execution}
 A practical problem of implementing faceted execution is that it can have high runtime cost. As the example with \textit{square-root} above indicates, functions applied to facets must be evaluated twice, once with the high-confidentiality value and once with the low-confidentiality value. The double evaluation imposes a significant runtime cost on faceted execution (as well as complicating the use of functions with side-effects). This cost can be mitigated to some extent by static analysis with an abstract interpreter. If the static analyzer can prove that a facet passed to a function only ever evaluates to its high-confidentiality value, then the evaluation of the function with the low-confidentiality value could be skipped, and significant performance gains could be realized.
