Add background about type theory to thesis

--- a/tex/thesis.bib
+++ b/tex/thesis.bib
@@ -44,4 +44,12 @@
   year    = {2012},
 }
 
+@Book{types,
+  title     = {Types and programming languages},
+  publisher = {The MIT Press},
+  year      = {2002},
+  author    = {Pierce, Benjamin C.},
+  address   = {Cambridge, MA},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
